--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
     "geist": "^1.3.1",
+    "googleapis": "^154.1.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next": "15.3.0-canary.13",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-use-measure": "^2.1.7",
     "sonner": "^2.0.1",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
@@ -32,6 +39,7 @@
     "@tailwindcss/postcss": "^4.0.14",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
     "postcss": "^8.5.3",
